tests/parser-test-files/bad-files/parse-the.3.error
error: Malformed the expression
  --> test:4:26
   |
 4 |  (define x (the (T -> T) y z))
   |                            ^ unexpected trailing form
