tests/parser-test-files/bad-files/parse-the.3.coal
;; BAD: Parse The
(package test-package)

(define x (the (T -> T) y z))
